# cc_webserver

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: http_server.py
tests/: test_integration.py
